<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:theme="@style/my_style">
    <!-- theme : 하위 view 전부 , style 해당 view 만 -->


    <Button
        android:id="@+id/btn_contraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_contraint"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20dp"
        style="@style/my_button_style"/>

    <Button
        android:id="@+id/btn_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_linear"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20dp"
        style="@style/my_button_style"/>

    <Button
        android:id="@+id/btn_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_relative"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20dp"
        style="@style/my_button_style"/>
</LinearLayout>