<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivityRelative">
    <Space
        android:id="@+id/space_1"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_page_text"
        android:layout_weight="29"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_1" />
    <Space
        android:id="@+id/space_2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_below="@id/tv_login"
        />
    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="20dp"
        android:hint="@string/et_id_hint"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_2"/>
    <Space
        android:id="@+id/space_3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/et_id"
        />
    <EditText
        android:id="@+id/et_pw"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:hint="@string/et_pw_hint"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_3" />
    <Space
        android:id="@+id/space_4"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_below="@id/et_pw"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text"
        android:textSize="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_4"
        style="@style/my_button_style"/>
    <Space
        android:id="@+id/space_5"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/btn_login"
        />
    <Button
        android:id="@+id/btn_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_to_main_text"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_5"
        style="@style/my_button_style"/>

</RelativeLayout>